login shared pref

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,8 @@ dependencies {
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
+
+
+    //Encrypted Shared Preferences
+    implementation "androidx.security:security-crypto:1.1.0-alpha06"
 }
