--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
         android:theme="@style/Theme.QuickHire"
         tools:targetApi="31">
         <activity
+            android:name=".OrganisationMainActivity"
+            android:exported="false"
+            android:label="@string/title_activity_organisation_main" />
+        <activity
             android:name=".ui.register.NewRegisterActivity"
             android:exported="true" />
         <activity
@@ -32,7 +36,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name" />
     </application>
 
 </manifest>
