--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,7 @@ dependencies {
 
     //Encrypted Shared Preferences
     implementation "androidx.security:security-crypto:1.1.0-alpha06"
+
+    //Expended View
+    implementation 'com.ms-square:expandableTextView:0.1.4'
 }
